사이즈 조절

--- a/main/templates/common/banner_bottom.html
+++ b/main/templates/common/banner_bottom.html
@@ -1,5 +1,5 @@
 {% load static %}
-<div class="banner bottom">
+<div class="banner bottom" style="z-index:1;">
     <img class="bg left01" src="{% static 'resource/img/sub/bg_botBanner_left01.png' %}" alt="bg01">
     <img class="bg left02" src="{% static 'resource/img/sub/bg_botBanner_left02.png' %}" alt="bg02">
     <img class="bg right" src="{% static 'resource/img/sub/bg_botBanner_right.png' %}" alt="bg03">
