--- a/main/templates/main/index_runcoding.html
+++ b/main/templates/main/index_runcoding.html
@@ -25,7 +25,7 @@
         </div>
     </section>
 
-    <section class="section02">
+    <section class="section02" style="z-index:1;">
         <img class="bg left" src="{% static 'resource/img/main/bg_sec02left.png' %}" alt="left bg">
         <img class="bg right" src="{% static 'resource/img/main/bg_sec02right.png' %}" alt="right bg">
 
@@ -121,7 +121,7 @@
             </div>
         </div>
 
-        <div class="ourClass">
+        <div class="ourClass" style="z-index:1;">
             <span class="big_title">융합적 사고를 위한 디자인 코딩 키트</span>
             <p>
                 쉽게! 뚝딱!<br/> 런코딩의 목표에 맞게 교육할 수 있도록<br/>
@@ -132,7 +132,7 @@
                 과학S, 기술T, 공학E, 예술A, 수학M, STEAM 융학 교육 방식의 디자인 키트입니다.
 
             </p>
-            <div class="link_area">
+            <div class="link_area" >
                 <a class="link big">
                     <!--<span>온라인 강의</span>-->
                     <img src="{% static 'resource/img/main/link_onlineClass.png' %}" alt="온라인 강의">
@@ -152,7 +152,7 @@
                     </a>
                 </div>
             </div>
-            <div class="progress_area">
+            <div class="progress_area" >
                 <ul>
                     <li class="pa01">
                             <span class="prog_title">
@@ -221,7 +221,7 @@
         </div>
     </section>
 {% include "common/banner_bottom.html" %}
-    <section class="section04">
+    <section class="section04" style="z-index:1;">
         <img class="bg left" src="{% static 'resource/img/main/bg_contactLeft.png' %}" alt="bg">
         <img class="bg right" src="{% static 'resource/img/main/bg_contactRight.png' %}" alt="bg">
         <div class="contactUs">
