--- a/main/templates/common/head.html
+++ b/main/templates/common/head.html
@@ -51,7 +51,7 @@
 <body oncontextmenu='return false' onselectstart='return false' ondragstart='return false'>
 
 
-    <div class="modal fade" style="max-width: 100%; width: auto; display: table;">
+    <div class="modal fade" style="max-width: 100%; width: auto; display: table; z-index:100;">
       <div class="modal-dialog" >
         <div id="res_msg" class="modal-content">
             <!-- remote ajax call이 되는영역 -->
