--- a/static/resource/css/layout.css
+++ b/static/resource/css/layout.css
@@ -122,8 +122,7 @@ body,th,td,input,select,textarea,button {font-size:24px;}
 
 .page {
     text-align:center;
-    margin-left: 400px;
-    width:50%;
+    width:100%;
 }
 
 .pagination {
@@ -393,8 +392,9 @@ body,th,td,input,select,textarea,button {font-size:24px;}
 }
 
 .codingLounge_list .filter_area {
-	width:90%;
+	width:95%;
 	align-items:center;
+	margin-left:10px;
 
 }
 .codingLounge_list .filter_area.scr {
@@ -976,7 +976,8 @@ body,th,td,input,select,textarea,button {font-size:24px;}
 
 /* coding lounge list */
 .codingLounge_list {
-	margin-left: 30px;
+    position: relative;
+	margin: 0 auto;
 	width: 100%;
 	max-width: 1130px;
 }
@@ -987,7 +988,7 @@ body,th,td,input,select,textarea,button {font-size:24px;}
 	align-items:center;
 }
 .codingLounge_list ul li {
-	margin:0 65px 65px 0;
+	margin:0 65px 65px 10px;
 	width:calc((100% - 130px) / 3);
 	background-color:#f7f7f7;
 	border-radius:5px;
@@ -2585,8 +2586,8 @@ input[id*="answer"] + label + div {
     transition:all .35s;
     overflow:hidden;
     background:white;
-    font-size:17px;
-    color:#000;
+    font-size:15px;
+    color:#454d5b;
     max-width: 1110px;
     width:95%;
 
