네이버페이-1

--- a/main/templates/class/class_detail.html
+++ b/main/templates/class/class_detail.html
@@ -105,7 +105,7 @@
                     <div class="btn_area">
                         <a href="javascript:void(0);" class="btn cart" onClick="javascript:goOrder(1);">장바구니 담기</a>
                         <a class="btn buy" href="javascript:void(0);" onClick="javascript:goOrder(2);">바로구매</a>
-                         <div id="naverpay_btn" class="btn-center" style="margin-left:20px; margin-bottom:40px;"></div>
+                         <div id="naverpay_btn" class="btn-center" style="margin-bottom:40px;"></div>
                     </div>
 
                     <div id="margin" style="margin-top:40px;"></div>
@@ -127,7 +127,7 @@
             BUTTON_KEY: "CE196A42-5C47-46D0-A871-00BB22E69FB6",
             TYPE: "A", //버튼 스타일
             COLOR: 1, //버튼 색상타입
-            COUNT: 1, // 네이버페이버튼 + 찜하기버튼 모두 출력 여부
+            COUNT: 2, // 네이버페이버튼 + 찜하기버튼 모두 출력 여부
             ENABLE: "Y", //네이버페이 활성여부(재고부족 등에는 N으로 비활성처리)
             EMBED_ID: "naverpay_btn", //네이버페이 버튼 UI가 부착될 HTML element의 ID
             BUY_BUTTON_HANDLER : function() {
