--- a/main/templates/common/head.html
+++ b/main/templates/common/head.html
@@ -50,6 +50,14 @@
 
 <body oncontextmenu='return false' onselectstart='return false' ondragstart='return false'>
 
+    <script type="text/javascript" src="http://wcs.naver.net/wcslog.js"></script>
+    <script type="text/javascript">
+    if(!wcs_add) var wcs_add = {};
+    wcs_add["wa"] = "s_48e7c73d9d86";
+              wcs.inflow("runcoding.co.kr");
+    wcs_do();
+    </script>
+​
 
     <div class="modal fade" style="max-width: 100%; width: auto; display: table; z-index:100;">
       <div class="modal-dialog" >
