--- a/main/templates/payment/order.html
+++ b/main/templates/payment/order.html
@@ -17,8 +17,8 @@
         </div>
     </section>
 
-    <div id="orderDiv" > <!--style="display: none" -->
-         <div class="container margin-top-40">
+    <div class="container" > <!--style="display: none" -->
+         <div class="margin-top-40">
              <div class="row">
                   <div class="col-xs-offset-1 col-xs-10">
                       <div class="row">
@@ -456,11 +456,9 @@
             </div>
             <div id="naverpay_btn" class="btn-center" style="margin-bottom:40px;"></div>
          </div>
-    </div>
 
-
-{% include "common/banner_bottom.html" %}
-{% include "common/footer.html" %}
+    {% include "common/banner_bottom.html" %}
+    {% include "common/footer.html" %}
 </div>
 
 
