엠블럭/아두이노 선택 버그 수정

--- a/main/templates/class/class_detail.html
+++ b/main/templates/class/class_detail.html
@@ -191,7 +191,7 @@
                  $("input[type=hidden][name=id]").val('100');
             }
 
-             $("input[type=hidden][name=option_level]").val(option_level);
+            $("input[type=hidden][name=option_level]").val(option_level.value);
             $("input[type=hidden][name=flag]").val(flag);
             $("input[type=hidden][name=count]").val(quantity);
             document.getElementById("prd_form").submit();
