장바구니와 결제하기 구분

--- a/main/templates/common/header.html
+++ b/main/templates/common/header.html
@@ -56,6 +56,11 @@
         }
     }
 
+    window.onbeforeunload = function()
+    {
+        window.history.back();
+    };
+
     </script>
 
     <div class="header_wrap">
