네이버페이 xml 수정

--- a/main/templates/product/xml.html
+++ b/main/templates/product/xml.html
@@ -2,9 +2,9 @@
     var xml = '{{xml_file}}';
 
     if(xml == '2020080013001')
+        location.href = "/static/resource/data/xml/trashcan_arduino.xml";
+    else if(xml == '2020080023001')
+        location.href = "/static/resource/data/xml/trashcan_mblock.xml";
+    else if(xml == 'all')
         location.href = "/static/resource/data/xml/trashcan.xml";
-<!--    else if(xml == '2020080023001')-->
-<!--        location.href = "/static/resource/data/xml/trashcan_mblock.xml";-->
-<!--    else if(xml == 'all')-->
-<!--        location.href = "/static/resource/data/xml/trashcan.xml";-->
 </script>
