강의 구분 & 네이버페이 연동 중

--- a/main/templates/class/class_list.html
+++ b/main/templates/class/class_list.html
@@ -37,7 +37,7 @@
 
                     <div class="text_area">
                         <span>
-                            <small class="type">{{classList_detail.title2}}</small>
+                            <small class="type">{{classList_detail.keyword}}</small>
                             {{classList_detail.title}}
                         </span>
                         <div class="ckInfo">
