--- a/main/templates/common/head.html
+++ b/main/templates/common/head.html
@@ -19,8 +19,8 @@
     <meta property="og:image" content="{% static 'resource/img/common/share_img.jpg' %}">
 
     <!-- favicon -->
-    <link rel="shortcut icon" href="{% static 'resource/img/common/favicon.ico' %}" type="image/x-icon">
-    <link rel="icon" href="{% static 'resource/img/common/favicon.ico' %}" type="image/x-icon">
+    <link rel="shortcut icon" href="{% static 'resource/img/common/favicon.png' %}" type="image/x-icon">
+<!--    <link rel="icon" href="{% static 'resource/img/common/favicon.ico' %}" type="image/x-icon">-->
 
     <link rel="stylesheet" type="text/css" href="{% static 'resource/css/font-awesome.min.css' %}">
 
@@ -35,14 +35,12 @@
 
     <link rel="stylesheet" href="//cdn.jsdelivr.net/gh/stove99/jquery-modal-sample@v1.4/css/animate.min.css" />
     <link rel="stylesheet" href="//cdn.jsdelivr.net/gh/stove99/jquery-modal-sample@v1.4/css/jquery.modal.css" />
-    <script src="//cdn.jsdelivr.net/gh/stove99/jquery-modal-sample@v1.4/js/jquery.modal.js"></script>
-    <script src="//cdn.jsdelivr.net/gh/stove99/jquery-modal-sample@v1.4/js/modal.js"></script>
-    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-    <script src="https://ssl.daumcdn.net/dmaps/map_js_init/postcode.v2.js"></script>
+<!--    <script src="//cdn.jsdelivr.net/gh/stove99/jquery-modal-sample@v1.4/js/jquery.modal.js"></script>-->
+<!--    <script src="//cdn.jsdelivr.net/gh/stove99/jquery-modal-sample@v1.4/js/modal.js"></script>-->
 
     <script src="{% static 'resource/js/vendor/jquery-3.4.1.min.js' %}"></script>
     <script src="{% static 'resource/js/vendor/modernizr-3.7.1.min.js' %}"></script>
-    <script src="{% static 'resource/js/jquery-migrate-3.0.0.js' %}"></script>
+<!--    <script src="{% static 'resource/js/jquery-migrate-3.0.0.js' %}"></script>-->
     <script src="{% static 'resource/js/common.js' %}"></script>
     <script src="{% static 'resource/js/wrest.js' %}"></script>
 
