--- a/main/templates/myclass/myclass.html
+++ b/main/templates/myclass/myclass.html
@@ -55,7 +55,7 @@
                                     <ul class="submenu">
                                          {% for common_detail in myclass_common_detail %}
                                        <li>
-                                             <a href="javascript:getVideo('common', '{{common_detail.data}}', '{{common_detail.downdata}}', '{{common_detail.downdata_name}}');" class="classList">
+                                             <a href="javascript:getVideo('{{common_detail.prd.prd_code}}', '{{common_detail.data}}', '{{common_detail.downdata}}', '{{common_detail.downdata_name}}');" class="classList">
                                                  {{forloop.counter}}. {{common_detail.title}}</a>
                                        </li>
                                         {% endfor %}
