--- a/main/templates/payment/pay_info.html
+++ b/main/templates/payment/pay_info.html
@@ -38,6 +38,7 @@
     var buyer_addr = buyer_addr2.concat(" ", buyer_addr3);
     var buyer_postcode = '{{payment.pay_user.regi_add01}}';
     var method = '{{pay_method}}';
+    var pay_num = '{{payment.pay_num}}';
 
     if(price > 0)
     {
@@ -47,7 +48,7 @@
         IMP.request_pay({
         pg : 'kcp',
         pay_method : method,
-        merchant_uid : 'merchant_' + new Date().getTime(),
+        merchant_uid : 'merchant_' + pay_num,
         name : title,
         amount : price,
         buyer_email : email,
